# CommitWise

./: README.md  commit_history.json  databases.md  mycreds.json  package-lock.json  python.py
backend/ai_explanation/: Dockerfile
backend/ai_explanation/app/: main.py  ollama_client.py  requirements.txt  s3_client.py  sns_client.py  sqs_client.py
backend/commit_getter_service/: app.py  requirements.txt  test_app.py
backend/commit_saver/: pom.xml
backend/commit_saver/src/main/resources/: application.properties
backend/databases/: pom.xml
backend/databases/src/main/resources/: application.yml  localstack.txt
backend/kafka/: README.md  docker-compose.yml  python.py
backend/localstack/: docker-compose.yml
backend/localstack/volume/cache/: license.json  machine.json  server.test.pem.crt  server.test.pem.key
backend/localstack/volume/cache/apt/: postgresql-client-15_15.8-1.pgdg120+1_arm64.deb  (+4 more)
backend/rust_worker/: Cargo.toml
backend/rust_worker/src/: main.rs
backend/springboot_backend/: pom.xml
docs/: design_choices.md  dynamodb_item_structure.md  story_points.md
frontend/: .env  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/project/1/: globals.css  layout.tsx  page.tsx
frontend/app/sections/: faq.tsx  features.tsx  header.tsx
frontend/components/: footer.tsx
frontend/components/ui/: GitDiffViewer.tsx  accordion.tsx  progress.tsx  progressbar.tsx
frontend/lib/: db.ts
frontend/prisma/: schema.prisma
(+17 files in other folders)
